--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Vana (vana.com)",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5333",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
